--- a/web-applications-testing/src/App.css
+++ b/web-applications-testing/src/App.css
@@ -10,7 +10,7 @@
   justify-content: center;
   flex-direction: column;
   width: 400px; 
-  background-color: black;
+  background-color: rgb(54, 54, 54);
   box-shadow: 0px 0px 10px grey;
 }
 
@@ -23,7 +23,6 @@ button {
   width: 70px;
   height: 30px;
   margin: 10px;
-  border: 1px solid dodgerblue;
   box-shadow: 3px 3px 0px orangered;
   font-size: 16px;
   color: black;
@@ -32,6 +31,7 @@ button {
 
 .display {
   background-color: orangered;
+  font-size: 18px;
 }
 
 .App-logo {
