--- a/web-applications-testing/src/App.css
+++ b/web-applications-testing/src/App.css
@@ -12,6 +12,7 @@
   width: 400px; 
   background-color: rgb(54, 54, 54);
   box-shadow: 0px 0px 10px grey;
+  border-radius: 15px;
 }
 
 p, h1, h2 {
@@ -26,12 +27,13 @@ button {
   box-shadow: 3px 3px 0px orangered;
   font-size: 16px;
   color: black;
-  text-shadow: 0px 0px 7px grey
-}
+  text-shadow: 0px 0px 7px grey;
+  border-radius: 5px;}
 
 .display {
   background-color: orangered;
   font-size: 18px;
+  font-weight: bold;
 }
 
 .App-logo {
